# mcp-obsidian

./: .dockerignore  .env.docker.example  .env.http.example  CHATGPT_SETUP.md  Dockerfile  README.md  docker-compose.yml  openapi-mcp-http.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
src/mcp_obsidian/: __init__.py  http_server.py
